tests/errors/polymorphic_ref.eff
(* The following should not work, it used to due to a bug in unification. *)

let local_store r s0 = handler
  | r#lookup () k -> fun s -> k s s
  | r#update s k -> fun _ -> k () s
  | val x -> fun _ -> x
  | finally f -> f s0

let (put, get,s) =
    let r = new ref in
       with local_store r [] handle
          (r#update, r#lookup, r) ;;

with local_store s [] handle
     put [5] ;
     put ("foo":: get()) ;
     get () ;;
